--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -28,13 +28,18 @@ jobs:
           with:
             username: ${{secrets.DOCKER_USERNAME}}
             password: ${{secrets.DOCKER_ACCESS_TOKEN}}
+        - name: PrepareReg Names
+          id: read_docker_image_identifiers
+          run: |
+            echo VERSION_TAG=$(echo ${{steps.version_step.outputs.version_tag}} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
+            echo LATEST_TAG=$(echo ${{steps.version_step.outputs.latest_tag}} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
         - name: Build and push
           id: docker_build
           uses: docker/build-push-action@v2
           with:
             push: true
             tags: |
-              ${{steps.version_step.outputs.version_tag}}
-              ${{steps.version_step.outputs.latest_tag}}
+              ${{env.VERSION_TAG}}
+              ${{env.LATEST_TAG}}
             build-args: |
               ${{steps.version_step.outputs.version}}
